--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
     />
   </head>
   <body>
+    <main id="calculator">
+      <div id="container">
+        <div id="display"></div>
+        <button class="operand" value="7">7</button>
+        <button class="operand" value="8">8</button>
+        <button class="operand" value="9">9</button>
+        <button class="clear" value="clear">C</button>
+        <button class="operand" value="4">4</button>
+        <button class="operand" value="5">5</button>
+        <button class="operand" value="6">6</button>
+        <button class="operator" value="+">+</button>
+        <button class="operand" value="1">1</button>
+        <button class="operand" value="2">2</button>
+        <button class="operand" value="3">3</button>
+        <button class="operator" value="-">-</button>
+        <button class="operand" value="0">0</button>
+        <button class="decimal" value=".">.</button>
+        <button class="equals" value="=">=</button>
+        <button class="operator" value="x">x</button>
+        <button class="operator" value="/">/</button>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
