--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
     <main id="calculator">
       <div id="container">
         <div id="display"></div>
-        <button class="operand" value="7">7</button>
-        <button class="operand" value="8">8</button>
-        <button class="operand" value="9">9</button>
-        <button class="clear" value="clear">C</button>
-        <button class="operand" value="4">4</button>
-        <button class="operand" value="5">5</button>
-        <button class="operand" value="6">6</button>
-        <button class="operator" value="+">+</button>
-        <button class="operand" value="1">1</button>
-        <button class="operand" value="2">2</button>
-        <button class="operand" value="3">3</button>
-        <button class="operator" value="-">-</button>
-        <button class="operand" value="0">0</button>
-        <button class="decimal" value=".">.</button>
-        <button class="equals" value="=">=</button>
-        <button class="operator" value="x">x</button>
-        <button class="operator" value="/">/</button>
+        <button class="clear" type="button" value="clear">C</button>
+        <button class="sign" type="button" value="sign">+/-</button>
+        <button class="percent" type="button" value="percent">%</button>
+        <button class="operator" type="button" value="/">/</button>
+        <button class="operand" type="button" value="7">7</button>
+        <button class="operand" type="button" value="8">8</button>
+        <button class="operand" type="button" value="9">9</button>
+        <button class="operator" type="button" value="*">X</button>
+        <button class="operand" type="button" value="4">4</button>
+        <button class="operand" type="button" value="5">5</button>
+        <button class="operand" type="button" value="6">6</button>
+        <button class="operator" type="button" value="-">-</button>
+        <button class="operand" type="button" value="1">1</button>
+        <button class="operand" type="button" value="2">2</button>
+        <button class="operand" type="button" value="3">3</button>
+        <button class="operator" type="button" value="+">+</button>
+        <button class="operand" id="zero" type="button" value="0">0</button>
+        <button type="button" class="decimal" value=".">.</button>
+        <button type="button" class="equals" value="=">=</button>
       </div>
     </main>
     <script src="script.js"></script>
